SEO: Add robots.txt, sitemap.xml, SEO component, and essential pages (About, Contact, Privacy, Terms)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InstamInsta | Pro Instagram Downloader</title>
+    <title>InstamInsta | Free Instagram Video & Reels Downloader (HD 2026)</title>
+    <meta name="description"
+        content="Download Instagram Reels, Videos, Photos, Stories, and IGTV content for free with InstamInsta. High-quality HD downloads, no login required. Fast and secure.">
+    <meta name="keywords"
+        content="instagram downloader, download instagram reels, instagram video downloader, instagram photo downloader, instagram story saver, igtv downloader, instaminsta">
+    <link rel="canonical" href="https://instaminsta.com/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://instaminsta.com/">
+    <meta property="og:title" content="InstamInsta | Pro Instagram Downloader">
+    <meta property="og:description" content="Download Instagram Reels, Videos, Photos, and more safely.">
+    <meta property="og:image" content="https://instaminsta.com/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://instaminsta.com/">
+    <meta property="twitter:title" content="InstamInsta | Pro Instagram Downloader">
+    <meta property="twitter:description" content="Download Instagram Reels, Videos, Photos, and more safely.">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
