SEO: Add Google Search Console verification meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InstamInsta | Free Instagram Video & Reels Downloader (HD 2026)</title>
+    <meta name="google-site-verification" content="googledc670f39ac84db6d" />
     <meta name="description"
         content="Download Instagram Reels, Videos, Photos, Stories, and IGTV content for free with InstamInsta. High-quality HD downloads, no login required. Fast and secure.">
     <meta name="keywords"
