--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InstamInsta | Free Instagram Video & Reels Downloader (HD 2026)</title>
-    <meta name="google-site-verification" content="googledc670f39ac84db6d" />
+    <meta name="google-site-verification" content="hDmupcnUzKCexBPaUfOdv7QwpwlGgBorMCOVoJQCVF4" />
     <meta name="description"
         content="Download Instagram Reels, Videos, Photos, Stories, and IGTV content for free with InstamInsta. High-quality HD downloads, no login required. Fast and secure.">
     <meta name="keywords"
@@ -41,6 +41,7 @@
         .hero-text-gradient {
             background: linear-gradient(to right, #f97316, #ec4899, #a855f7);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
         }
 
