--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <meta property="twitter:title" content="InstamInsta | Pro Instagram Downloader">
     <meta property="twitter:description" content="Download Instagram Reels, Videos, Photos, and more safely.">
 
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Outfit:wght@500;600;700;800&display=swap"
         rel="stylesheet">
 </head>
 
