perf: add preconnect and defer for faster loading

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
     <meta property="twitter:title" content="instaminsta | Pro Instagram Downloader">
     <meta property="twitter:description" content="Download Instagram Reels, Videos, Photos, and more safely.">
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://cdn.tailwindcss.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
+    <script src="https://cdn.tailwindcss.com" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="preload"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
     <style>
         body {
             font-family: 'Inter', sans-serif;
